# GServer

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  flake.nix
deploy/: compose.yml
server/: main.rs
server/net/: client.rs  listener.rs  packets.rs
server/shared/: protocol.rs
server/world/: player.rs  world.rs
services/app/: .dockerignore  .env  .env.example  Dockerfile  go.mod  go.sum
services/app/cmd/: main.go
services/app/config/settings/: base.go
services/app/internal/database/: db.go
services/app/internal/handlers/auth/: auth.go  detail.go
services/app/internal/handlers/position/: update.go
services/app/internal/middleware/auth/: auth.go
services/app/internal/models/: loc.go  usrs.go
services/app/internal/routes/: auth.go  pos.go
services/app/internal/schemas/position/requests/: reqs.go
services/app/internal/schemas/user/response/: response.go
services/app/internal/services/: auth.go
services/app/internal/services/auth/: auth.go
services/app/internal/services/game/: updt.go
services/app/internal/services/jwt/: jwt.go
services/app/internal/services/responses/: jwt.go  usr.go
services/game/: .dockerignore  Cargo.toml  Dockerfile
services/game/src/: main.rs
services/game/src/net/: mod.rs  packet.rs  udp.rs
services/game/src/systems/: timeout.rs
services/game/src/world/: mod.rs  player.rs  state.rs
