a[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
dotenvy = "0.15"

[[bin]]
name = "main"
path = "src/main.rs"
